--- a/maisinformações/style.css
+++ b/maisinformações/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("https://media.tenor.com/1qXbmObIezQAAAAC/vaporwave-vhs.gif");
+	background-image: url("https://wallpaperaccess.com/full/5927911.gif");
 	background-size: cover;
 	display: flex;
 	flex-direction: column;
@@ -81,7 +81,17 @@ nav ul li a {
 	border-radius: 20px;
 }
 
-
+.container2 {
+	background-color: rgba(255, 255, 255, 0.7);
+	margin-top: 50px;	
+	text-align: inherit;
+	width: 80%;
+	height: 80%;
+	margin: auto;
+	overflow-y: auto;
+	padding: 20px;
+	border-radius: 20px;
+}
 
 
 html {
